# yowaic

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  driver.c  generator.c  generator.h  lex.yy.c  parser.c  parser.h  scanner.l  test.sh  token.c  token.h  unit_test.c  util.c  util.h  yowaic.c
Example/: fibonacci.c  foo.s
modules/llvm/: CMakeLists.txt  llvm.cppm
modules/tree-sitter/: CMakeLists.txt  tree-sitter.cppm
modules/tree-sitter-c/: CMakeLists.txt  tree-sitter-c.cppm
src/: CMakeLists.txt  lexer.cpp  main.cpp  main.cxx  parser.cpp
test/: CMakeLists.txt  test_main.cpp
